Deployment/Kubernetes/Vote/deployements.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'vote-app'
  labels:
    tags: voting-application

spec:
  template:
    metadata:
      name: 'vote-app'
      labels:
        app: 'vote-app'

    spec:
      containers:
      - name: vote
        image: abhijeetka/vote:07

  replicas: 2
  selector:
    matchLabels:
      app: 'vote-app'
