Deployment/Kubernetes/Vote/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  labels:
    tags: voting-application
spec:
  type: ClusterIP
  selector:
    app: vote-app
  ports:
  - port: 80
    targetPort: 80
