Deployment/Kubernetes/Vote/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: jupyter-ig
spec:
  ingressClassName: nginx
  rules:
  - host: jen-kube.tenant703257.ibdp.calibo.com
    http:
      paths:
      - backend:
          service:
            name: vote-service
            port:
              number: 80
        path: /voting
        pathType: ImplementationSpecific
